# NetAssist

./: .gitignore  README.md  TECHNICAL_REPORT.md  UI.md  functions.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: CNB_SETUP_GUIDE.md  MACOS_BUILD_GUIDE.md  MACOS_BUILD_QUICKSTART.md  MACOS_PACKAGING_SUMMARY.md  TENCENT_CLOUD_SETUP.md
scripts/: build-macos.sh
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tmpclaude-5fd5-cwd
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icon.py  icon.icns  tmpclaude-cdb6-cwd
src-tauri/src/: main.rs
src-tauri/src/commands/: connections.rs  dns.rs  emergency.rs  ip_info.rs  mod.rs  network_quality.rs  settings.rs  traffic.rs  traffic_history.rs
src-tauri/src/core/: mod.rs  tmpclaude-75b1-cwd
src-tauri/src/core/network/: dual_stack.rs  geoip.rs  interface.rs  ip_info.rs  mod.rs
src-tauri/src/models/: connection.rs  diagnostic.rs  dns.rs  mod.rs  network.rs  traffic.rs
src-tauri/src/platform/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/components/: ErrorBoundary.tsx
src/components/ConnectionManager/: ConnectionManager.tsx
src/components/Dashboard/: Dashboard.tsx  IPInfoCard.tsx  MetricCard.tsx  NetworkStatus.tsx  TrafficChart.tsx
src/components/EmergencyKit/: EmergencyKit.tsx
src/components/Navigation/: Navigation.tsx
src/components/Settings/: Settings.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/TrafficMonitor/: HistoryTrendChart.tsx  TrafficMonitor.tsx  TrafficMonitorEnhanced.tsx  types.ts
src/hooks/: useNetworkData.ts  useTrafficData.ts
src/locales/: en.json  zh.json
src/store/: settingsStore.ts
src/utils/: formatUtils.ts  notify.ts
