[package]
name = "netassist"
version = "0.3.0"
description = "A network monitoring and troubleshooting tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Networking
pnet = "0.35"
socket2 = "0.5"
hickory-proto = "0.25"
reqwest = { version = "0.12", features = ["json"] }

# System information
sysinfo = "0.32"

# Utilities
cfg-if = "1.0"
rand = "0.9"
dirs = "5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }
widestring = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
nix = "0.29"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
mach2 = "0.4"
